--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html,body{
     width:100%;
     font-family: 'Poppins', sans-serif;
     background: rgb(121, 61, 0);
-    background-image: url("8a56aea57b4cc4106cc32c51631a4d74.jpg");
+    background-image: url("bgi.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     
